more scrollbar fixing
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@21205 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_annotations.scss
+++ b/src/main/resources/scss/_annotations.scss
@@ -196,6 +196,7 @@
 
 
 .x-component-annotation-view {
+	@include scrollbar(#fbfbfb, $tertiary-grey);
 	overflow: {
 		x: hidden;
 		y: scroll;
